# urban_shape

./: .gitignore  base.ipynb  cluster.ipynb  main.ipynb  pyproject.toml
urban_shape/: definitions.py  managers.py  partitions.py  resources.py
urban_shape/assets/: __init__.py  denue.py  points.py  polygons.py  scian.py
