[project]
name = "urban-shape"
version = "0.1.0"
description = ""
authors = [
    {name = "RodolfoFigueroa",email = "4rodolfofigueroa2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dagster (>=1.10.11,<2.0.0)",
    "dagster-webserver (>=1.10.11,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "shapely (>=2.1.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)",
    "esda (>=2.7.0,<3.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "tmtoolkit (>=0.12.0,<0.13.0)",
    "scikit-learn-extra (>=0.3.0,<0.4.0)",
    "hdbscan (>=0.8.40,<0.9.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "cfc-core-utils @ git+https://github.com/CentroFuturoCiudades/cfc_core_utils.git@v0.2.0",
    "rasterio (>=1.4.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.dagster]
module_name = "urban_shape.definitions"
code_location_name = "urban_shape"


[tool.basedpyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "standard"